<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">My Apps!</string>
    <string name="spotify">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="big">Build It Bigger</string>
    <string name="xyz">XYZ Reader</string>
    <string name="cap">Capstone: My Own App</string>
</resources>
